<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/account">

        <Preference
            android:key="account_status"
            android:selectable="true" />

        <ListPreference
            android:key="account_language"
            android:title="@string/language"
            android:dialogTitle="@string/language"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="en"/>

        <cafe.adriel.nmsalphabet.ui.adapter.ThemePreferenceAdapter
            android:key="account_theme"
            android:title="@string/theme"
            android:dialogTitle="@string/theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="theme1"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:key="about_new_race"
            android:title="@string/discovered_new_race"
            android:summary="@string/discovered_new_race_summary" />

        <Preference
            android:key="about_feedback"
            android:title="@string/feedback"
            android:summary="@string/feedback_summary" />

        <Preference
            android:key="about_translators"
            android:title="@string/translators"
            android:summary="@string/translators_summary" />

        <Preference
            android:key="about_share"
            android:title="@string/share"
            android:summary="@string/share_summary" />

        <Preference
            android:key="about_rate"
            android:title="@string/rate"
            android:summary="@string/rate_summary" />

        <Preference
            android:key="about_version"
            android:title="@string/version"/>

    </PreferenceCategory>

</PreferenceScreen>