<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:background="@color/bg_update">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/message"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white"
            android:text="@string/we_became_better"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/update"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/gray_light"
            android:text="@string/current_version_not_supported"/>

        <RelativeLayout
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="40dp"
            android:padding="15dp"
            android:orientation="horizontal"
            android:background="@drawable/button_white"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:text="{gmi-google-play}"
                android:textColor="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/update_app"
                android:textColor="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:font="custom1"/>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>