<?xml version="1.0" encoding="utf-8"?>
<com.ramotion.foldingcell.FoldingCell
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?colorAccent">

            <TextView
                android:id="@+id/alien_word"
                android:textColor="@android:color/white"
                app:font="custom1"
                style="@style/AlienWordTextView"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray_light"
            android:weightSum="1">

            <TextView
                android:id="@+id/tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                style="@style/AlienRaceTextView"/>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:drawablePadding="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/translations_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:orientation="vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray_light"
            android:weightSum="0.9">

            <TextView
                android:id="@+id/new_translation"
                android:layout_weight="0.3"
                android:text="@string/new_translation_with_icon"
                style="@style/AlienWordControlTextView"/>

            <TextView
                android:id="@+id/see_all_translations"
                android:layout_weight="0.3"
                android:text="@string/see_all_translations_with_icon"
                style="@style/AlienWordControlTextView"/>

            <TextView
                android:id="@+id/share_translation"
                android:layout_weight="0.3"
                android:text="@string/share_with_icon"
                style="@style/AlienWordControlTextView"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bg_white"
        android:elevation="2dp">

        <TextView
            android:id="@+id/tag_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            style="@style/AlienRaceTitleTextView"/>

        <TextView
            android:id="@+id/alien_word_title"
            android:textColor="@android:color/black"
            app:font="custom1"
            style="@style/AlienWordTextView"/>

    </RelativeLayout>

</com.ramotion.foldingcell.FoldingCell>